# birch

./: .gitignore  CMakeLists.txt  README.md  birch.c  birch.h  test-freenode.c
bots/: fortune.c  fortune.h  hash.c  hash.h  path.c  path.h
